--- a/src/main/webapp/edit/index.jspx
+++ b/src/main/webapp/edit/index.jspx
@@ -13,7 +13,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Edit</title>
+  <title>TMF Editors</title>
   <style type="text/css">
   body {font-family: sans-serif;}
   div.pager > a,
@@ -21,9 +21,16 @@
   </style>
 
   <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/tmf.css')}" />
+  <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/tmf2.css')}" />
   <link rel="icon" href="${mm:link('/mmbase/style/images/favicon.ico')}" type="image/x-icon" />
   <link rel="shortcut icon" href="${mm:link('/mmbase/style/images/favicon.ico')}" type="image/x-icon" />
-
+  <style type="text/css">
+    body { padding: 1em; }
+    .logo { 
+    	float: left;
+    	margin: 0 12px 24px 12px;
+    }
+  </style>
 </head>
 <body>
 
@@ -32,8 +39,9 @@
 <mm:import id="list">${wizards}/list.jsp</mm:import>
 <mm:import id="wizard">${wizards}/wizard.jsp</mm:import>
 
+<a href="${mm:link('/')}"><img class="logo" src="${mm:link('/style/images/tmf-logo.gif')}" alt="Tactical Media Files" width="95" /></a> 
 
-<h1>Editors</h1>
+<h1 class="Title">TMF Editors</h1>
 
 <table width="700">
 <tr>
@@ -47,16 +55,17 @@
 <td width="8%" class="link">
 <!--
 <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/anouncement&nodepath=type,event,dates&constraints=type.type='anouncement'&main=event&orderby=dates.begindate&directions=down&fields=dates.begindate,event.title,event.subtitle,type.type&searchfields=event.title,event.subtitle,type.type" />"><img alt="&gt;" src="../mmbase/style/images/next.gif"  /></a>  --> 
-<mm:link page="$list">
-  <mm:param name="wizard">TMF/anouncement</mm:param>
-  <mm:param name="nodepath">type,event</mm:param>
-  <mm:param name="constraints">type.type='anouncement'</mm:param>
-  <mm:param name="main">event</mm:param>
-  <mm:param name="orderby">event.begindate</mm:param>
-  <mm:param name="fields">event.begindate,event.title,event.subtitle,type.type</mm:param>
-  <mm:param name="searchfields">event.title,event.subtitle,type.type</mm:param>
-  <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}" /></a>
-</mm:link>
+
+  <mm:link page="$list">
+	<mm:param name="wizard">TMF/anouncement</mm:param>
+	<mm:param name="nodepath">type,event</mm:param>
+	<mm:param name="constraints">type.type='anouncement'</mm:param>
+	<mm:param name="main">event</mm:param>
+	<mm:param name="orderby">event.begindate</mm:param>
+	<mm:param name="fields">event.begindate,event.title,event.subtitle,type.type</mm:param>
+	<mm:param name="searchfields">event.title,event.subtitle,type.type</mm:param>
+	<a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}" /></a>
+  </mm:link>
 
 
 </td>
@@ -68,7 +77,7 @@
 
     <mm:link page="$wizard">
       <mm:param name="wizard">TMF/event2anouncement</mm:param>
-      <mm:param name="objectnumber">38197</mm:param>
+      <mm:param name="objectnumber">anouncement</mm:param>
       <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}" /></a>
     </mm:link>    
     
@@ -81,9 +90,8 @@
     
     <mm:link page="$wizard">
       <mm:param name="wizard">TMF/featured</mm:param>
-      <mm:param name="nodepath">type</mm:param>
-      <mm:param name="constraints">type='special'</mm:param>
-      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}"  /></a>
+	  <mm:param name="objectnumber">special</mm:param>
+      <a href="${_}"><img alt="&gt;" src="${mm:link('/mmbase/style/images/next.gif')}" /></a>
     </mm:link>
         
     </td>
@@ -98,6 +106,7 @@
     <td>Articles</td>
     <td width="8%" class="link">
     <!-- <a href="<mm:url referids="referrer,language" page="${ew}/list.jsp?wizard=TMF/article&nodepath=article&orderby=number&directions=down&fields=title,subtitle&searchfields=title,subtitle" />"><img alt="&gt;" src="../mmbase/style/images/next.gif"  /></a> -->
+    
     <mm:link page="$list">
       <mm:param name="wizard">TMF/article</mm:param>
       <mm:param name="nodepath">article</mm:param>
