--- a/src/main/webapp/style/css/tmf2.css
+++ b/src/main/webapp/style/css/tmf2.css
@@ -13,6 +13,7 @@ body
     padding: 0;
 }
 
+ul.NavigationMenu li { font-size: 0.9em; }
 body.article ul.NavigationMenu a.articles { color: #616161; }
 body.campaign ul.NavigationMenu a.campaigns { color: #616161; }
 body.event ul.NavigationMenu a.events { color: #616161; }
