--- a/src/main/webapp/style/css/tmf2.css
+++ b/src/main/webapp/style/css/tmf2.css
@@ -74,6 +74,14 @@ div.SearchResults a.tag:hover
     text-decoration: underline;
 }
 
+div.ArticleSummary p {
+	font-family: Georgia, serif;
+	font-style: italic;
+	line-height: 24px;
+	padding: 3px;
+	color: #3A3A3A;
+}
+
 div.ArticleLinksContainer { color: #ccc; }
 div.ArticleLinksContainer div.tags
 {
