--- a/src/main/webapp/style/css/tmf2.css
+++ b/src/main/webapp/style/css/tmf2.css
@@ -136,6 +136,10 @@ div.tmf_addthis .addthis_button_delicious
 */
 
 div.ArticleLinksLabel { clear: both; }
+div.ArticleLinksLabel.first {
+	clear: none;
+	float: right;
+}
 .shift_left.wp { margin-top: 2px; }
 .shift_left a.addthis_button_wordpress { margin: -17px 0 0 -2px; }
 
