--- a/src/main/webapp/style/css/tmf2.css
+++ b/src/main/webapp/style/css/tmf2.css
@@ -74,6 +74,8 @@ div.SearchResults a.tag:hover
     text-decoration: underline;
 }
 
+.ArticleAuthor { font-size: 0.9em; }
+
 div.ArticleSummary p {
 	font-family: Georgia, serif;
 	font-style: italic;
